    #482465, #484324)
  * add Vcs-Svn header (closes: #481654)
  * fix debian-kfreebsd-i386 build flags (closes: #482275)
  * add stunnel4 to restart list (closes: #482111)
  * include fixes from 10.1 NMB by Security team
    - Fix double free in TLS server name extension which leads to a remote
      denial of service (CVE-2008-0891; Closes: #483379).

 -- Christoph Martin <christoph.martin@uni-mainz.de>  Tue, 10 Jun 2008 12:06:37 +0200

openssl (0.9.8g-10) unstable; urgency=low

  * undefine HZ so that the code falls back to sysconf(_SC_CLK_TCK)
    to fix a build failure on alpha.

 -- Kurt Roeckx <kurt@roeckx.be>  Thu, 08 May 2008 17:56:13 +0000

openssl (0.9.8g-9) unstable; urgency=high

  [ Christoph Martin ]
  * Include updated debconf translations (closes: #473477, #461597,
    #461880, #462011, #465517, #475439)

  [ Kurt Roeckx ]
  * ssleay_rand_add() really needs to call MD_Update() for buf.

 -- Kurt Roeckx <kurt@roeckx.be>  Wed, 07 May 2008 20:32:12 +0200

openssl (0.9.8g-8) unstable; urgency=high

  * Don't add extentions to ssl v3 connections.  It breaks with some
    other software.  (Closes: #471681)

 -- Kurt Roeckx <kurt@roeckx.be>  Sun, 23 Mar 2008 17:50:04 +0000

openssl (0.9.8g-7) unstable; urgency=low

  * Upload to unstable.

 -- Kurt Roeckx <kurt@roeckx.be>  Wed, 13 Feb 2008 22:22:29 +0000

openssl (0.9.8g-6) experimental; urgency=low

  * Bump shlibs.

 -- Kurt Roeckx <kurt@roeckx.be>  Sat, 09 Feb 2008 15:42:22 +0100

openssl (0.9.8g-5) experimental; urgency=low

  * Enable tlsext.  This changes the ABI, but should hopefully
    not cause any problems. (Closes: #462596)

 -- Kurt Roeckx <kurt@roeckx.be>  Sat, 09 Feb 2008 13:32:49 +0100

openssl (0.9.8g-4) unstable; urgency=low

  * Fix aes ige test speed not to overwrite it's buffer and
    cause segfauls.  Thanks to Tim Hudson (Closes: #459619)
  * Mark some strings in the templates as non translatable.
    Patch from Christian Perrier <bubulle@debian.org> (Closes: #450418)